change underlying PKCS#11 wrapper to IAIK wrapper (version 1.6.1).