@@ -8,20 +8,26 @@
     <artifactId>oss-parent</artifactId>
     <version>7</version>
   </parent>
-  <groupId>org.xipki.iaik</groupId>
-  <artifactId>sunpkcs11-wrapper2</artifactId>
+  <groupId>org.xipki</groupId>
+  <artifactId>pkcs11-wrapper2</artifactId>
   <version>1.0.0-SNAPSHOT</version>
-  <packaging>bundle</packaging>
-  <name>PKCS#11 wrapper</name>
-  <description>PKCS#11 wrapper 2 based on sunpkcs11</description>
+  <packaging>jar</packaging>
+  <name>PKCS#11 wrapper 2</name>
+  <description>PKCS#11 wrapper 2 based on IAIK's PKCS#11 wrapper</description>
   <properties>
+    <!--must match the version defined above-->
+    <bundle.version>1.0.0.SNAPSHOT</bundle.version>
     <test.excludes>**/*Speed.java</test.excludes>
     <test.junit.argline></test.junit.argline>
   </properties>
   <licenses>
     <license>
-      <name>IAIK of Graz University of Technology License</name>
-      <url>https://jce.iaik.tugraz.at/sic/Products/Core_Crypto_Toolkits/PKCS_11_Wrapper/license</url>
+      <name>IAIK PKCS#11 Wrapper License, Stiftung SIC</name>
+      <url>https://jce.iaik.tugraz.at/products/core-crypto-toolkits/pkcs11-wrapper/#License</url>
+    </license>
+    <license>
+      <name>The Apache Software License, Version 2.0</name>
+      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
     </license>
   </licenses>
   <distributionManagement>
@@ -35,9 +41,9 @@
     </repository>
   </distributionManagement>
   <scm>
-    <connection>scm:git:git@github.com:xipki/pkcs11wrapper.git</connection>
-    <developerConnection>scm:git:git@github.com:xipki/pkcs11wrapper.git</developerConnection>
-    <url>git@github.com:xipki/pkcs11wrapper.git</url>
+    <connection>scm:git:git@github.com:xipki/pkcs11wrapper2.git</connection>
+    <developerConnection>scm:git:git@github.com:xipki/pkcs11wrapper2.git</developerConnection>
+    <url>git@github.com:xipki/pkcs11wrapper2.git</url>
   </scm>
   <dependencies>
     <dependency>
@@ -66,6 +72,17 @@
     </dependency>
   </dependencies>
   <build>
+    <resources>
+      <resource>
+        <directory>src/main/resources</directory>
+      </resource>
+      <resource>
+        <directory>.</directory>
+        <includes>
+          <include>LICENSE</include>
+        </includes>
+      </resource>
+    </resources>
     <pluginManagement>
       <plugins>
         <plugin>
@@ -74,22 +91,17 @@
           <version>3.0.0</version>
         </plugin>
         <plugin>
-          <groupId>org.codehaus.mojo</groupId>
-          <artifactId>buildnumber-maven-plugin</artifactId>
-          <version>1.4</version>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.felix</groupId>
-          <artifactId>maven-bundle-plugin</artifactId>
-          <version>3.5.0</version>
-        </plugin>
-        <plugin>
           <artifactId>maven-clean-plugin</artifactId>
           <version>3.1.0</version>
         </plugin>
         <plugin>
           <artifactId>maven-compiler-plugin</artifactId>
           <version>3.7.0</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-jar-plugin</artifactId>
+          <version>3.3.0</version>
         </plugin>
         <plugin>
           <artifactId>maven-deploy-plugin</artifactId>
@@ -153,6 +165,50 @@
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <configuration>
+          <archive>
+            <manifestEntries>
+              <Export-Package>iaik.pkcs.pkcs11,iaik.pkcs.pkcs11.objects,iaik.pkcs.pkcs11.wrapper,iaik.pkcs.pkcs11.parameters</Export-Package>
+              <Bundle-ManifestVersion>2</Bundle-ManifestVersion>
+              <Bundle-Name>pkcs11-wrapper2</Bundle-Name>
+              <Bundle-SymbolicName>org.xipki.pkcs11-wrapper2</Bundle-SymbolicName>
+              <Bundle-Version>${bundle.version}</Bundle-Version>
+            </manifestEntries>
+          </archive>
+          <excludes>
+            <exclude>natives/**/debug/**</exclude>
+          </excludes>
+        </configuration>
+        <executions>
+          <execution>
+            <id>jar-debug</id>
+            <phase>package</phase>
+            <goals>
+              <goal>jar</goal>
+            </goals>
+            <configuration>
+              <classifier>debug</classifier>
+              <includes>
+                <include>iaik/**</include>
+                <include>LICENSE</include>
+                <include>natives/**/debug/**</include>
+              </includes>
+              <excludes>
+                <exclude>natives/**/release/**</exclude>
+              </excludes>
+              <archive>
+                <manifestEntries>
+                  <Bundle-Name>pkcs11-wrapper2-debug</Bundle-Name>
+                  <Bundle-SymbolicName>org.xipki.pkcs11-wrapper2-debug</Bundle-SymbolicName>
+                </manifestEntries>
+              </archive>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <!--plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-source-plugin</artifactId>
         <executions>
           <execution>
@@ -162,40 +218,7 @@
             </goals>
           </execution>
         </executions>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.felix</groupId>
-        <artifactId>maven-bundle-plugin</artifactId>
-        <extensions>true</extensions>
-        <configuration>
-          <instructions>
-            <Bundle-Vendor>Lijun Liao (xipki.org)</Bundle-Vendor>
-            <Bundle-Build-Id>${buildNumber}</Bundle-Build-Id>
-            <Bundle-Description>${project.name}</Bundle-Description>
-            <Bundle-Build-Timestamp>${timestamp}</Bundle-Build-Timestamp>
-          </instructions>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>buildnumber-maven-plugin</artifactId>
-        <executions>
-          <execution>
-            <phase>validate</phase>
-            <goals>
-              <goal>create</goal>
-            </goals>
-          </execution>
-        </executions>
-        <configuration>
-          <shortRevisionLength>8</shortRevisionLength>
-          <doCheck>false</doCheck>
-          <doUpdate>false</doUpdate>
-          <getRevisionOnlyOnce>true</getRevisionOnlyOnce>
-          <revisionOnScmFailure>NO_GIT</revisionOnScmFailure>
-          <timestampFormat>{0,date,yyyy-MM-dd-HH:mm:ss}</timestampFormat>
-        </configuration>
-      </plugin>
+      </plugin-->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-enforcer-plugin</artifactId>
@@ -226,15 +249,6 @@
       </activation>
       <properties>
         <test.excludes>none</test.excludes>
-      </properties>
-    </profile>
-    <profile>
-      <id>jdk9on</id>
-      <activation>
-        <jdk>[9,]</jdk>
-      </activation>
-      <properties>
-        <test.junit.argline>--add-exports=jdk.crypto.cryptoki/sun.security.pkcs11.wrapper=ALL-UNNAMED</test.junit.argline>
       </properties>
     </profile>
     <profile>
